[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtmlib"
version = "0.0.15"
description = "RTMPose series (RTMPose, DWPose, RTMO, RTMW, VitPose) without mmcv, mmpose, mmdet etc."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "onnxruntime",
    "opencv-contrib-python",
    "opencv-python",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rtmlib = ["py.typed"]
